# lightning-boost

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gen_ref_pages.py  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
api/SUMMARY/: index.html
api/classifier/: index.html
api/distributions/base/: index.html
api/distributions/categorical/: index.html
api/distributions/exponential/: index.html
api/distributions/gamma/: index.html
api/distributions/halfnormal/: index.html
api/distributions/laplace/: index.html
api/distributions/lognormal/: index.html
api/distributions/normal/: index.html
api/distributions/poisson/: index.html
api/distributions/studentt/: index.html
api/distributions/weibull/: index.html
api/engine/: index.html
api/evaluation/: index.html
api/regressor/: index.html
api/scoring/: index.html
api/survival/: index.html
api/survival_estimator/: index.html
benchmarks/: __init__.py  __main__.py  _datasets.py  _utils.py  cli.py  index.html
contributing/: index.html
docs/: benchmarks.md  contributing.md  index.md  llms.txt
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: advanced.md  distributions.md  evaluation.md  scoring-rules.md  survival.md
examples/: basic_classification.py  basic_regression.py  comparison_with_ngboost.py  visual_heteroscedastic_sine.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
ngboost_lightning/: __init__.py  classifier.py  engine.py  evaluation.py  regressor.py  scoring.py  survival.py  survival_estimator.py
ngboost_lightning/distributions/: __init__.py  base.py  categorical.py  exponential.py  gamma.py  halfnormal.py  laplace.py  lognormal.py  normal.py  poisson.py  studentt.py  weibull.py
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  _constants.py  conftest.py  test_bernoulli.py  test_categorical.py  test_cauchy.py  test_classifier.py  test_col_sample.py  test_crps.py  test_engine.py  test_engine_distributions.py  test_evaluation.py  test_exponential.py  test_gamma.py  test_halfnormal.py  test_laplace.py  test_lognormal.py  test_loss_monitor.py  test_natural_gradient.py  test_normal.py  test_parity.py  test_poisson.py  test_regressor.py  test_sample_weight.py  test_smoke.py  test_staged_predictions.py  test_studentt.py  test_survival.py  test_validation_fraction.py  test_weibull.py
user-guide/advanced/: index.html
user-guide/distributions/: index.html
user-guide/evaluation/: index.html
user-guide/scoring-rules/: index.html
user-guide/survival/: index.html
