[project]
name = "ngboost-lightning"
version = "0.1.0"
description = "Natural gradient boosting for probabilistic prediction, powered by LightGBM."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Kyle Schmaus", email = "kyle.schmaus@gmail.com" },
]
keywords = ["machine-learning", "gradient-boosting", "probabilistic-prediction", "ngboost", "lightgbm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "lightgbm>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/kschmaus/ngboost-lightning"
Documentation = "https://kschmaus.github.io/ngboost-lightning/"
Repository = "https://github.com/kschmaus/ngboost-lightning"
Issues = "https://github.com/kschmaus/ngboost-lightning/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ngboost>=0.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "scipy-stubs>=1.17.1.3",
    "typer>=0.12",
    "matplotlib>=3.7",
    "xlrd>=2.0.2",
    "openpyxl>=3.1.5",
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (docstring checks)
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806"]  # allow uppercase X_train, X_test (ML convention)
"ngboost_lightning/engine.py" = ["N803", "N806"]  # ML convention: X, X_val
"ngboost_lightning/regressor.py" = ["N803", "N806"]  # ML convention: X, X_val
"ngboost_lightning/classifier.py" = ["N803", "N806"]  # ML convention: X, X_val
"ngboost_lightning/evaluation.py" = ["ANN401"]  # matplotlib axes typed as Any
"ngboost_lightning/survival.py" = ["N802", "N803", "N806"]  # survival convention: T, E, Y
"ngboost_lightning/survival_estimator.py" = ["N803", "N806"]  # ML convention: X, T, E
"benchmarks/**" = ["N803", "N806", "D", "I001", "ANN"]  # relaxed lint for benchmarks

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["ngboost_lightning"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
